--- a/public/style.css
+++ b/public/style.css
@@ -1,22 +1,59 @@
 .cadre-home {
-  padding: 100px;
-  background: rgba( 255, 255, 255, 0.25 );
+  padding-top: 100px;
+  padding-right: 100px;
+  padding-bottom: 100px;
+  padding-left: 100px;
+  background: rgba(255, 255, 255, 0.25);
   box-shadow: 0 8px 32px 0 rgba(135, 86, 31, 0.37);
-  backdrop-filter: blur( 4px );
-  -webkit-backdrop-filter: blur( 4px );
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
   border-radius: 10px;
-  border: 1px solid rgba( 255, 255, 255, 0.18 );
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
-html {
-  scroll-behavior: smooth;
+/* .oui {
+  background-color: #faf2eb;
+  color: #e5e7e6 #eee6d8 #daab3a #b67332 #93441a;
+} */
+
+.arrow:before {
+  text-align: center;
+  position: absolute;
 }
 
-.oui {
- background-color: #faf2eb ;
- color: #e5e7e6
-        #EEE6D8
-        #DAAB3A
-        #B67332
-        #93441A;
+.arrow {
+  width: 60px;
+  height: 60px;
+  margin: -20px 0 0 -20px;
+  -webkit-transform: rotate(45deg);
+  border-left: none;
+  border-top: none;
+  border-right: 4px #93441a solid;
+  border-bottom: 4px #93441a solid;
+}
+
+.arrow:before {
+  content: "";
+  width: 40px;
+  height: 40px;
+  top: 50%;
+  margin: -15px 0 0 -15px;
+  border-left: none;
+  border-top: none;
+  border-right: 2px #93441a solid;
+  border-bottom: 2px #93441a solid;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-name: arrow;
+  animation-direction: reverse;
+}
+
+@keyframes arrow {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: translate(-10px, -10px);
+  }
 }
