--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: "Epilogue";
+  src: url("./font/Epilogue-VariableFont_wght.ttf") format("truetype"),
+  url("./font/Epilogue-Italic-VariableFont_wght.ttf") format("truetype");
+ }
+
 .cadre-home {
   padding-top: 100px;
   padding-right: 100px;
@@ -16,6 +22,10 @@
   color: #e5e7e6 #eee6d8 #daab3a #b67332 #93441a;
 } */
 
+html {
+  font-family: 'Epilogue' !important;
+}
+
 .arrow:before {
   text-align: center;
   position: absolute;
@@ -28,8 +38,8 @@
   -webkit-transform: rotate(45deg);
   border-left: none;
   border-top: none;
-  border-right: 4px #93441a solid;
-  border-bottom: 4px #93441a solid;
+  border-right: 5px #93441a solid;
+  border-bottom: 5px #93441a solid;
 }
 
 .arrow:before {
@@ -37,15 +47,15 @@
   width: 40px;
   height: 40px;
   top: 50%;
-  margin: -15px 0 0 -15px;
+  margin: -20px 0 0 -20px;
   border-left: none;
   border-top: none;
   border-right: 2px #93441a solid;
   border-bottom: 2px #93441a solid;
-  animation-duration: 3s;
+  animation-duration: 2s;
   animation-iteration-count: infinite;
   animation-name: arrow;
-  animation-direction: reverse;
+  animation-direction: alternate-reverse;
 }
 
 @keyframes arrow {
@@ -53,7 +63,7 @@
     opacity: 1;
   }
   100% {
-    opacity: 0;
+    opacity: 1;
     transform: translate(-10px, -10px);
   }
 }
