--- a/public/style.css
+++ b/public/style.css
@@ -9,7 +9,7 @@
   padding-right: 100px;
   padding-bottom: 100px;
   padding-left: 100px;
-  background: rgba(255, 255, 255, 0.25);
+  background: rgba(255, 255, 255, 0.286);
   box-shadow: 0 8px 32px 0 rgba(135, 86, 31, 0.37);
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
@@ -38,8 +38,8 @@ html {
   -webkit-transform: rotate(45deg);
   border-left: none;
   border-top: none;
-  border-right: 5px #93441a solid;
-  border-bottom: 5px #93441a solid;
+  border-right: 5px #000 solid;
+  border-bottom: 5px #000 solid;
 }
 
 .arrow:before {
@@ -50,8 +50,8 @@ html {
   margin: -20px 0 0 -20px;
   border-left: none;
   border-top: none;
-  border-right: 2px #93441a solid;
-  border-bottom: 2px #93441a solid;
+  border-right: 2px #000 solid;
+  border-bottom: 2px #000 solid;
   animation-duration: 2s;
   animation-iteration-count: infinite;
   animation-name: arrow;
