--- a/public/style.css
+++ b/public/style.css
@@ -5,12 +5,12 @@
  }
 
 .cadre-home {
-  padding-top: 100px;
-  padding-right: 100px;
-  padding-bottom: 100px;
-  padding-left: 100px;
+  padding-top: 10%;
+  padding-right: 10%;
+  padding-bottom: 10%;
+  padding-left: 10%;
   background: rgba(66, 66, 66, 0.286);
-  box-shadow: 0 8px 32px 0 rgba(127, 90, 240, 0.37); 
+  box-shadow: 0 8px 32px 0 rgba(127, 90, 240, 0.37);
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   border-radius: 10px;
